# mini-claude-rust

./: .gitignore  Cargo.toml  README.md
src/: adaptive_prompt.rs  agent_loop.rs  agent_memory_updater.rs  agent_profile.rs  agent_progress.rs  agent_sub.rs  auto_classifier.rs  beta_headers.rs  cache_break_detection.rs  cache_metrics.rs  cache_optimizer.rs  claudemd.rs  cleanup.rs  compact.rs  config.rs  consecutive_failure_tracker.rs  context.rs  context_references.rs  cost_tracker.rs  cron.rs  error_reporter.rs  error_types.rs  file_lock.rs  filehistory.rs  forked_agent.rs  hooks.rs  idle_compress.rs  json_utils.rs  lib.rs  main.rs  memoize.rs  model_aliases.rs  model_capabilities.rs  multi_settings.rs  normalize.rs  permissions.rs  proactive_budget.rs  process_manager.rs  prompt_caching.rs  rate_limit.rs  (+24 more)
src/mcp/: client.rs  mod.rs  schema.rs
src/permissions/: auto_strip.rs  internal_paths.rs  main.rs  mod.rs  path_validation.rs  rule_parser.rs  rule_store.rs  rules_loader.rs
src/skills/: loader.rs  mod.rs  task_evolution.rs  tracker.rs
src/tools/: agent_handle_store.rs  agent_handoff.rs  agent_sidechain.rs  agent_store.rs  agent_tool.rs  agent_tools.rs  agent_worktree.rs  ask_user_question.rs  bash_readonly.rs  bash_security.rs  bash_task_tools.rs  bg_task_output.rs  brief_tool.rs  capabilities.rs  chunk_archival.rs  coercion.rs  encoding.rs  enter_plan_mode.rs  exa_search.rs  exec_git_readonly.rs  exec_powershell.rs  exec_tool.rs  exit_plan_mode.rs  file_edit.rs  file_encoding.rs  file_history_tools.rs  file_read.rs  file_write.rs  fileops.rs  filesystem_safety.rs  git_tool.rs  glob_tool.rs  grep_tool.rs  json_repair.rs  list_dir.rs  mcp_tools.rs  memory_tool.rs  mod.rs  multi_edit.rs  notebook_edit.rs  (+18 more)
src/tools/rgrep/: binary.rs  config.rs  gitignore.rs  mod.rs  searcher.rs  sink.rs  types.rs  walker.rs
src/transcript/: mod.rs
src/utils/: async_utils.rs  config_utils.rs  crypto_utils.rs  data_utils.rs  display_utils.rs  file_utils.rs  mod.rs  slice_ansi_utils.rs  slice_utils.rs  truncated_result_saver.rs
tests/: agent_loop_test.rs  compact_test.rs  config_test.rs  context_test.rs  filehistory_test.rs  filehistory_tools_test.rs  mcp_test.rs  permissions_test.rs  search_skill_test.rs  skill_tracker_test.rs  skills_test.rs  streaming.rs  tools_test.rs  transcript_test.rs
