[package]
name = "miniclaudecode-rust"
version = "0.1.0"
edition = "2021"
description = "A lightweight AI coding assistant in Rust"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Futures for StreamExt
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }

# Anthropic SDK (or compatible)
# Using our own implementation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching / utilities
glob = "0.3"
regex = "1.10"
walkdir = "2.4"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"

# Terminal
console = "0.16"
dialoguer = "0.11"

# Encoding
base64 = "0.22"
encoding_rs = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Compression
flate2 = "1.0"
brotli = "3.4"

# Random ID generation
uuid = { version = "1.6", features = ["v4"] }

# URL encoding
urlencoding = "2.1"

# CPU count
num_cpus = "1.16"

# Ctrl+C handler
ctrlc = "3.4"

# Cancellation token
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
