[package]
name = "miniclaudecode-rust"
version = "0.1.0"
edition = "2021"
description = "A lightweight AI coding assistant in Rust"
license = "MIT"

[features]
default = ["tools-web", "tools-terminal"]

# Tool feature flags
tools-web = []                          # web_search, web_fetch, exa_search
tools-terminal = []                     # system, process, runtime_info, terminal
tools-notebook = []                     # notebook_edit
tools-encoding = []                     # file_encoding (encoding_rs always included)

# Extension feature flags
feature-mcp = []                        # MCP server protocol
feature-skills = []                     # skill loading and tracking
feature-cron = []                       # cron scheduling
feature-filehistory = []                # file history (12 tools)
feature-session-memory = []             # session persistent memory
feature-session-persistence = []        # session snapshots
feature-work-task = []                  # work task management
feature-telemetry = []                  # telemetry events
feature-error-reporter = []             # error file logging
feature-claudemd = []                   # CLAUDE.md injection
feature-hooks = []                      # pre/post execution hooks
feature-proactive-budget = []           # budget-aware prompting
feature-agent-management = []           # agent_list/get/kill
feature-plan-mode = []                  # enter/exit plan mode
feature-send-message = []               # send_message tool
feature-brief = []                      # brief tool
feature-todo = []                       # todo_write
feature-task = []                       # task_create/list/get/update/stop
feature-transcript = []                 # conversation transcript
feature-cleanup = []                    # stale file cleanup
feature-settings = []                   # multi_settings
feature-semver = []                     # semantic versioning

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Futures for StreamExt
futures = "0.3"

# HTTP client (always needed for API calls)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }

# Anthropic SDK (or compatible)
# Using our own implementation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching / utilities
glob = "0.3"
regex = "1.10"
walkdir = "2.4"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"

# Terminal
console = "0.16"
dialoguer = "0.11"

# Encoding (always needed for UTF8 handling in core)
encoding_rs = "0.8"

# Date/Time (needed for cost tracking, transcripts, etc.)
chrono = { version = "0.4", features = ["serde"] }

# Compression (used by file history, compact, etc.)
flate2 = "1.0"
brotli = "3.4"

# Random ID generation
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"

# URL encoding
urlencoding = "2.1"

# Windows path canonicalization (avoids UNC \\?\ prefix)
dunce = "1.0"

# CPU count
num_cpus = "1.16"

# Ctrl+C handler
ctrlc = "3.4"

# Cancellation token
tokio-util = { version = "0.7", features = ["rt"] }

# Low-level Unix process group kill
libc = "0.2"

# Home directory detection
dirs = "5"
which = "8.0.2"

# Windows API (file locking on Windows)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
